--- a/templates/index.html
+++ b/templates/index.html
@@ -3,7 +3,7 @@
 <head xmlns="http://www.w3.org/1999/xhtml">
     <meta charset="UTF-8">
     <title>Car Price Predictor</title>
-    <link rel="stylesheet" href="static/css/style.css">
+    <link rel="stylesheet" href="/static/css/style.css">
     <link rel="stylesheet" type="text/css"
           href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.11.2/css/all.css">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
@@ -19,75 +19,72 @@
 </head>
 <body class="bg-dark">
 
-<div class="container">
-    <div class="row">
-        <div class="card mt-50" style="width: 100%; height: 100%">
-            <div class="card-header" style="text-align: center">
-                <h1>Welcome to Car Price Predictor</h1>
-            </div>
-            <div class="card-body">
-                <div class="col-12" style="text-align: center">
-                    <h5>This app predicts the price of a car you want to sell. Try filling the details below: </h5>
+<!-- Hero Section -->
+<section class="hero-section py-5 mb-4">
+    <div class="container text-center">
+        <span class="display-3 text-primary"><i class="fas fa-car-side"></i></span>
+        <h1 class="display-4 font-weight-bold mt-2">Car Price Predictor</h1>
+        <p class="lead text-light">Get the best estimate for your car's value in seconds!</p>
+    </div>
+</section>
+
+<!-- Centered Card Section -->
+<div class="d-flex justify-content-center align-items-center" style="min-height: calc(100vh - 300px);">
+    <div class="card shadow-lg p-4" style="max-width: 480px; width: 100%;">
+        <div class="card-body">
+            <h3 class="card-title text-center mb-4 text-info"><i class="fas fa-search-dollar"></i> Predict Your Car's Price</h3>
+            <form method="post" accept-charset="utf-8" name="Modelform" id="Modelform">
+                <div class="form-group">
+                    <label for="company"><i class="fas fa-building"></i> Company</label>
+                    <select class="selectpicker form-control" id="company" name="company" required="1"
+                            onchange="load_car_models(this.id,'car_models')">
+                        {% for company in companies %}
+                        <option value="{{ company }}">{{ company }}</option>
+                        {% endfor %}
+                    </select>
                 </div>
-                <br>
-                <form method="post" accept-charset="utf-8" name="Modelform">
-                    <div class="col-md-10 form-group" style="text-align: center">
-                        <label><b>Select the company:</b> </label><br>
-                        <select class="selectpicker form-control" id="company" name="company" required="1"
-                                onchange="load_car_models(this.id,'car_models')">
-                            {% for company in companies %}
-                            <option value="{{ company }}">{{ company }}</option>
-                            {% endfor %}
-                        </select>
-                    </div>
-                    <div class="col-md-10 form-group" style="text-align: center">
-                        <label><b>Select the model:</b> </label><br>
-                        <select class="selectpicker form-control" id="car_models" name="car_models" required="1">
-                        </select>
-                    </div>
-                    <div class="col-md-10 form-group" style="text-align: center">
-                        <label><b>Select Year of Purchase:</b> </label><br>
-                        <select class="selectpicker form-control" id="year" name="year" required="1">
-                            {% for year in years %}
-                            <option value="{{ year }}">{{ year }}</option>
-                            {% endfor %}
-                        </select>
-                    </div>
-                    <div class="col-md-10 form-group" style="text-align: center">
-                        <label><b>Select the Fuel Type:</b> </label><br>
-                        <select class="selectpicker form-control" id="fuel_type" name="fuel_type" required="1">
-                            {% for fuel in fuel_types %}
-                            <option value="{{ fuel }}">{{ fuel }}</option>
-                            {% endfor %}
-                        </select>
-                    </div>
-                    <div class="col-md-10 form-group" style="text-align: center">
-                        <label><b>Enter the Number of Kilometres that the car has travelled:</b> </label><br>
-                        <input type="text" class="form-control" id="kilo_driven" name="kilo_driven"
-                               placeholder="Enter the kilometres driven ">
-                    </div>
-                    <div class="col-md-10 form-group" style="text-align: center">
-                        <button  class="btn btn-primary form-control" onclick="send_data()">Predict Price</button>
-                    </div>
-                </form>
-                <br>
-                <div class="row">
-                    <div class="col-12" style="text-align: center">
-                        <h4><span id="prediction"></span></h4>
-                    </div>
+                <div class="form-group">
+                    <label for="car_models"><i class="fas fa-car"></i> Model</label>
+                    <select class="selectpicker form-control" id="car_models" name="car_models" required="1">
+                    </select>
                 </div>
+                <div class="form-group">
+                    <label for="year"><i class="fas fa-calendar-alt"></i> Year of Purchase</label>
+                    <select class="selectpicker form-control" id="year" name="year" required="1">
+                        {% for year in years %}
+                        <option value="{{ year }}">{{ year }}</option>
+                        {% endfor %}
+                    </select>
+                </div>
+                <div class="form-group">
+                    <label for="fuel_type"><i class="fas fa-gas-pump"></i> Fuel Type</label>
+                    <select class="selectpicker form-control" id="fuel_type" name="fuel_type" required="1">
+                        {% for fuel in fuel_types %}
+                        <option value="{{ fuel }}">{{ fuel }}</option>
+                        {% endfor %}
+                    </select>
+                </div>
+                <div class="form-group">
+                    <label for="kilo_driven"><i class="fas fa-tachometer-alt"></i> Kilometres Driven</label>
+                    <input type="text" class="form-control" id="kilo_driven" name="kilo_driven"
+                           placeholder="e.g. 35000" required>
+                </div>
+                <button type="button" class="btn btn-lg btn-block btn-primary mt-3" id="predictBtn">
+                    <i class="fas fa-magic"></i> Predict Price
+                </button>
+            </form>
+            <div class="text-center mt-4">
+                <h4><span id="prediction" class="text-success font-weight-bold"></span></h4>
             </div>
         </div>
     </div>
 </div>
 
 <script>
-
     function load_car_models(company_id,car_model_id)
     {
         var company=document.getElementById(company_id);
         var car_model= document.getElementById(car_model_id);
-        console.log(company.value);
         car_model.value="";
         car_model.innerHTML="";
         {% for company in companies %}
@@ -95,7 +92,6 @@
             {
                 {% for model in car_models %}
                     {% if company in model %}
-
                         var newOption= document.createElement("option");
                         newOption.value="{{ model }}";
                         newOption.innerHTML="{{ model }}";
@@ -105,33 +101,24 @@
             }
         {% endfor %}
     }
-
-    function form_handler(event) {
-        event.preventDefault(); // Don't submit the form normally
-    }
+    document.getElementById('predictBtn').addEventListener('click', send_data);
+    document.getElementById('Modelform').addEventListener('submit', function(event) {
+        event.preventDefault();
+    });
     function send_data()
     {
-        document.querySelector('form').addEventListener("submit",form_handler);
-
-        var fd=new FormData(document.querySelector('form'));
-
+        var fd=new FormData(document.getElementById('Modelform'));
         var xhr= new XMLHttpRequest({mozSystem: true});
-
         xhr.open('POST','/predict',true);
-        document.getElementById('prediction').innerHTML="Wait! Predicting Price.....";
+        document.getElementById('prediction').innerHTML="<i class='fas fa-spinner fa-spin'></i> Predicting...";
         xhr.onreadystatechange = function(){
             if(xhr.readyState == XMLHttpRequest.DONE){
-                document.getElementById('prediction').innerHTML="Prediction: ₹"+xhr.responseText;
-
+                document.getElementById('prediction').innerHTML="<i class='fas fa-rupee-sign'></i> "+xhr.responseText;
             }
         };
-
-        xhr.onload= function(){};
-
         xhr.send(fd);
     }
 </script>
-
 
 <!-- jQuery first, then Popper.js, then Bootstrap JS -->
 <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"
